# ad-experiment1

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/adcalc/: dsquare.cpp  dsquare.h  enzyme.h  square.cpp  square.h
src/calc/: f1.cpp  f1.h
